// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay component should render correctly 1`] = `
<div>
  <div
    className="item"
    key="1"
  />
</div>
`;

exports[`Overlay component should render without option id correctly 1`] = `
<div>
  <div
    className="item"
    key="0"
  >
    text
  </div>
</div>
`;
